--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -29,6 +29,7 @@
     /*box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);*/
     position: relative;
     border-radius: 10px 10px 10px 0;
+    word-break: break-word;
 }
 
 /*.text:after {*/
